<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string-array name="Qunatity">
        <item>Qunatity</item>
        <item>0.25</item>
        <item>0.50</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.25</item>
        <item>1.50</item>
        <item>1.75</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Unit">
        <item>Unit</item>
        <item>Gm</item>
        <item>Ml</item>
        <item>Tablespoon</item>
        <item>Teaspoon</item>
        <item>Cup</item>
        <item>Teacup</item>
        <item>Glass</item>
        <item>Oz</item>
    </string-array>


    <string name="app_name">Nutri Calculator for Baby Food</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch_screen">Parvarish-Nutri Calculator</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_signup_screen">SignupScreen</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="facebook_app_id">369582476581821</string>

    <string name="actionHome">Home</string>
    <string name="actionProfile">Profile</string>
    <string name="actionMyRecipes">My Recipes</string>
    <string name="actionDiary">Diary</string>
    <string name="actionFriends">Friends</string>
    <string name="actionNutriGuide">Nutritional Guidelines</string>
    <string name="actionGlossary">Glossary of Ingredients</string>
    <string name="actionTour">Welcome Tour</string>
    <string name="title_activity_profile_screen">ProfileScreen</string>
    <string name="title_activity_add_recipe_web_screen">AddRecipeWebScreen</string>
    <string name="title_activity_add_recipe_manual_screen">AddRecipeManualScreen</string>
    <string name="title_activity_my_recipe_list_screen">MyRecipeListScreen</string>
    <string name="title_activity_guide_lines_main_screen">GuideLinesMainScreen</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="dummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_guide_lines_sub_screen">GuideLinesSubScreen</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>



</resources>
